Change some params of delete_users
